new: reference() API reference (heh)

--- a/src/content/docs/en/reference/api-reference.mdx
+++ b/src/content/docs/en/reference/api-reference.mdx
@@ -771,6 +771,37 @@ This means collections **cannot** store a mix of content and data formats. If yo
 
 [See the `Content Collection` guide](/en/guides/content-collections/#defining-a-collection-schema) for example usage.
 
+### `reference()`
+
+**Type:** `(collection: string) => ZodEffects<ZodString, { collection, id: string } | { collection, slug: string }>`
+
+The `reference()` function is used in the content config to define a relationship, or "reference," from one collection to another. This accepts a collection name and validates the entry identifier(s) specified in your content frontmatter or data file.
+
+This example defines references from a blog author to the `authors` collection, and an array of related posts to the same `blog` collection:
+
+```ts
+import { defineCollection, reference, z } from 'astro:content';
+
+const blog = defineCollection({
+  type: 'content',
+  schema: z.object({
+    // Reference a single author from the `authors` collection by `id`
+    author: reference('authors'),
+    // Reference an array of related posts from the `blog` collection by `slug`
+    relatedPosts: z.array(reference('blog')),
+  })
+});
+
+const authors = defineCollection({
+  type: 'data',
+  schema: z.object({ /* ... */ })
+});
+
+export const collections = { blog, authors };
+```
+
+[See the `Content Collection` guide](/en/guides/content-collections/#defining-collection-references) for example usage.
+
 ### `getCollection()`
 
 **Type:** `(collection: string, filter?: (entry: CollectionEntry<collection>) => boolean) => CollectionEntry<collection>[]`
