edit: add third collection to organizing section

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -61,11 +61,12 @@ If you find yourself working with different types of content, you should create 
   - **newsletter/** 
     - week-1.md
     - week-2.md
-    - week-3.md
+  - **blog/**
+    - post-1.md
+    - post-2.md
   - **authors/**
     - grace-hopper.json
     - alan-turing.json
-    - batman.json
 </FileTree>
 
 
