edit: update Collection Entry Type section

--- a/src/content/docs/en/reference/api-reference.mdx
+++ b/src/content/docs/en/reference/api-reference.mdx
@@ -914,7 +914,7 @@ const enterprise = await getEntryBySlug('blog', 'enterprise');
 
 ### Collection Entry Type
 
-The [`getCollection()`](#getcollection) and [`getEntryBySlug()`](#getentrybyslug) functions each return entries with the `CollectionEntry` type. This type is available as a utility from `astro:content`:
+Query functions including [`getCollection()`](#getcollection) and [`getEntry()`](#getentry) each return entries with the `CollectionEntry` type. This type is available as a utility from `astro:content`:
 
 ```ts
 import type { CollectionEntry } from 'astro:content';
@@ -924,15 +924,16 @@ The `CollectionEntry<TCollectionName>` type is an object with the following valu
 
 #### `id`
 
-**Example Type:** `'entry-1.md' | 'entry-2.md' | ...`
+**Example Type for "content" collections:** `'entry-1.md' | 'entry-2.md' | ...`  
+**Example Type for "data" collections:** `'author-1' | 'author-2' | ...`
 
-A unique ID using the file path relative to `src/content/[collection]`. Enumerates all possible string values based on the collection entry file paths.
+A unique ID using the file path relative to `src/content/[collection]`. Enumerates all possible string values based on the collection entry file paths. Note that collections [defined as `type: 'content'`](#type) include the file extension in their ID, while collections defined as `type: 'data'` do not.
 
-#### `slug`
+#### `collection`
 
-**Example Type:** `'entry-1' | 'entry-2' | ...`
+**Example Type:** `'blog' | 'authors' | ...`
 
-A URL-ready slug. Defaults to the `id` without the file extension, but can be overridden by setting [the `slug` property](/en/guides/content-collections/#defining-custom-slugs) in a file's frontmatter.
+The name of the entry's collection.
 
 #### `data`
 
@@ -940,13 +941,23 @@ A URL-ready slug. Defaults to the `id` without the file extension, but can be ov
 
 An object of frontmatter properties inferred from your collection schema ([see `defineCollection()` reference](#definecollection)). Defaults to `any` if no schema is configured.
 
-#### `body`
+#### Content-specific properties
+
+The following properties are only available for collections [defined as `type: 'content'`](#type):
+
+##### `slug`
+
+**Example Type:** `'entry-1' | 'entry-2' | ...`
+
+A URL-ready slug for Markdown or MDX documents. Defaults to the `id` without the file extension, but can be overridden by setting [the `slug` property](/en/guides/content-collections/#defining-custom-slugs) in a file's frontmatter.
+
+##### `body`
 
 **Type:** `string`
 
 A string containing the raw, uncompiled body of the Markdown or MDX document.
 
-#### `render()`
+##### `render()`
 
 **Type:** `() => Promise<RenderedEntry>`
 
