nit: missed closing paren
Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>

--- a/src/content/docs/en/reference/api-reference.mdx
+++ b/src/content/docs/en/reference/api-reference.mdx
@@ -858,7 +858,7 @@ const captainProfile = await getEntry('captains', 'captain-kirk');
 ---
 import { getEntry } from 'astro:content';
 
-const enterprisePost = await getEntry('blog', 'enterprise);
+const enterprisePost = await getEntry('blog', 'enterprise');
 
 // Get the profile referenced by `data.captain`
 const captainProfile = await getEntry(enterprise.data.captain);
