nit: missed closing paren
Co-authored-by: Yan Thomas <61414485+Yan-Thomas@users.noreply.github.com>

--- a/src/content/docs/en/reference/api-reference.mdx
+++ b/src/content/docs/en/reference/api-reference.mdx
@@ -884,7 +884,7 @@ See the `Content Collection` guide for examples of [querying](/en/guides/content
 ---
 import { getEntries } from 'astro:content';
 
-const enterprisePost = await getEntry('blog', 'enterprise);
+const enterprisePost = await getEntry('blog', 'enterprise');
 
 // Get related posts referenced by `data.relatedPosts`
 const captainProfile = await getEntries(enterprise.data.relatedPosts);
