--- a/src/content/docs/en/reference/api-reference.mdx
+++ b/src/content/docs/en/reference/api-reference.mdx
@@ -777,7 +777,7 @@ This means collections **cannot** store a mix of content and data formats. If yo
 
 The `reference()` function is used in the content config to define a relationship, or "reference," from one collection to another. This accepts a collection name and validates the entry identifier(s) specified in your content frontmatter or data file.
 
-This example defines references from a blog author to the `authors` collection, and an array of related posts to the same `blog` collection:
+This example defines references from a blog author to the `authors` collection and an array of related posts to the same `blog` collection:
 
 ```ts
 import { defineCollection, reference, z } from 'astro:content';
