nit: `oneBlogPost` -> `graceHopperProfile`

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -340,7 +340,7 @@ const allBlogPosts = await getCollection('blog');
 // Requires the name of the collection and either
 // the entry `slug` (content collections) or `id` (data collections)
 // Example: retrieve `src/content/authors/grace-hopper.json`
-const oneBlogPost = await getEntry('authors', 'grace-hopper');
+const graceHopperProfile = await getEntry('authors', 'grace-hopper');
 ```
 
 Both functions return content entries as defined by the [`CollectionEntry`](/en/reference/api-reference/#collection-entry-type) type.
