Add feature directories to project structure guide

--- a/src/content/docs/en/core-concepts/project-structure.mdx
+++ b/src/content/docs/en/core-concepts/project-structure.mdx
@@ -117,3 +117,15 @@ See the [Configuring Astro Guide](/en/guides/configuring-astro/) for details on 
 This file is generated in every starter template and includes TypeScript configuration options for your Astro project. Some features (like npm package imports) aren’t fully supported in the editor without a `tsconfig.json` file. 
 
 See the [TypeScript Guide](/en/guides/typescript/) for details on setting configurations.
+
+## Feature Directories
+
+Astro supports a number of features that are not required for every project. These features utilize reserved directory names. These directories should not be used for anything else.
+
+### `src/content`
+
+The `src/content` directory powers [Content Collections](/en/guides/content-collections/). Only content collections are allowed inside the src/content directory.
+
+### `src/assets`
+
+The [`src/assets`](https://docs.astro.build/en/guides/assets/) directory is used to store assets that are processed by Astro and rendered to HTML. While not required, this directory is the [recommended convention](https://docs.astro.build/en/guides/assets/#move-your-images-to-srcassets).
