--- a/src/content/docs/en/core-concepts/project-structure.mdx
+++ b/src/content/docs/en/core-concepts/project-structure.mdx
@@ -128,4 +128,4 @@ The `src/content` directory powers [Content Collections](/en/guides/content-coll
 
 ### `src/assets`
 
-The [`src/assets`](https://docs.astro.build/en/guides/assets/) directory is used to store assets that are processed by Astro and rendered to HTML. While not required, this directory is the [recommended convention](https://docs.astro.build/en/guides/assets/#move-your-images-to-srcassets).
+The [`src/assets`](/en/guides/assets/) directory is used to store assets that are processed by Astro and rendered to HTML. While not required, this directory is the [recommended convention](/en/guides/assets/#move-your-images-to-srcassets).
