Collapse directories into one section

--- a/src/content/docs/en/core-concepts/project-structure.mdx
+++ b/src/content/docs/en/core-concepts/project-structure.mdx
@@ -118,14 +118,10 @@ This file is generated in every starter template and includes TypeScript configu
 
 See the [TypeScript Guide](/en/guides/typescript/) for details on setting configurations.
 
-## Feature Directories
-
-Astro supports a number of features that are not required for every project. These features utilize reserved directory names. These directories should not be used for anything else.
-
 ### `src/content`
 
 The `src/content` directory powers [Content Collections](/en/guides/content-collections/). Only content collections are allowed inside the src/content directory.
 
 ### `src/assets`
 
-The [`src/assets`](/en/guides/assets/) directory is used to store assets that are processed by Astro and rendered to HTML. While not required, this directory is the [recommended convention](/en/guides/assets/#move-your-images-to-srcassets).
+The [`src/assets`](/en/guides/assets/) directory is used to store assets that are processed by Astro. While not required, this directory is the [recommended convention](/en/guides/assets/#move-your-images-to-srcassets) and it's recommended to use this directory for your assets.
