Fix codeblocks arg

--- a/src/content/docs/fr/guides/deploy/google-firebase.mdx
+++ b/src/content/docs/fr/guides/deploy/google-firebase.mdx
@@ -17,7 +17,7 @@ Voir notre guide séparé pour [ajouter des services backend Firebase](/fr/guide
 
    `firebase.json` :
 
-   ``json
+   ```json
    {
      "hosting" : {
        "public" : "dist",
@@ -28,7 +28,7 @@ Voir notre guide séparé pour [ajouter des services backend Firebase](/fr/guide
 
    `.firebaserc` :
 
-   ``json
+   ```json
    {
      "projects" : {
        "default" : "<VOTRE_ID_FIREBASE>"
