translate korean astro-pages.mdx

--- a/src/content/docs/ko/core-concepts/astro-pages.mdx
+++ b/src/content/docs/ko/core-concepts/astro-pages.mdx
@@ -4,48 +4,50 @@ description: Astro 페이지를 소개합니다.
 i18nReady: true
 ---
 
-**페이지**는 Astro 프로젝트의 `src/pages/` 하위 디렉토리에 있는 파일입니다. 이 파일은 웹사이트의 모든 페이지에 대한 라우팅, 데이터 로딩 및 전체 페이지 레이아웃을 처리합니다.
+**페이지**는 Astro 프로젝트의 `src/pages/` 하위 디렉터리에 있는 파일입니다. 이 파일은 웹사이트의 모든 페이지에 대한 라우팅, 데이터 로딩 및 전체 페이지 레이아웃을 처리합니다.
 
-## Supported page files 
+## 지원하는 페이지 파일들
 
-Astro supports the following file types in the `src/pages/` directory:
+Astro는 `src/pages/` 디렉터리에서 다음 파일 형식을 지원합니다.
 - [`.astro`](#astro-pages)
 - [`.md`](#markdownmdx-pages)
-- `.mdx` (with the [MDX Integration installed](/en/guides/integrations-guide/mdx/#installation))
+- `.mdx` ([MDX Integration installed](/ko/guides/integrations-guide/mdx/#installation)와 함께)
 - [`.html`](#html-pages)
-- `.js`/`.ts` (as [endpoints](/en/core-concepts/endpoints/))
+- `.js`/`.ts` ([endpoints](/ko/core-concepts/endpoints/))
 
-## File-based routing
+## 파일 기반 라우팅
+
+Astro는 **파일 기반 라우팅** 전략을 활용합니다. `src/pages/` 디렉터리의 각 파일은 파일 경로에 따라 사이트의 엔드포인트가 됩니다.
 
 Astro leverages a routing strategy called **file-based routing**. Each file in your `src/pages/` directory becomes an endpoint on your site based on its file path.
 
-A single file can also generate multiple pages using [dynamic routing](/en/core-concepts/routing/#dynamic-routes). This allows you to create pages even if your content lives outside of the special `/pages/` directory, such as in a [content collection](/en/guides/content-collections/) or a [CMS](/en/guides/cms/).
+[dynamic routing](/ko/core-concepts/routing/#dynamic-routes)을 이용하여 단일 파일로 여러 페이지를 생성할 수도 있습니다. 이렇게 하면 콘텐츠가 [content collection](/ko/guides/content-collections/)이나 [CMS](/ko/guides/cms/)와 같이 특별한 `/pages/` 디렉터리 외부에 있는 경우에도 페이지를 만들 수 있습니다.
 
-📚 Read more about [Routing in Astro](/en/core-concepts/routing/).
+📚 [Routing in Astro](/ko/core-concepts/routing/)에 대해 자세히 알아보세요.
 
-### Link between pages
+### 페이지 간 링크
 
-Write standard HTML [`<a>` elements](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/a) in your Astro pages to link to other pages on your site.
+사이트의 다른 페이지로 연결할 수 있도록 Astro 페이지에 표준 HTML [`<a>` 요소](https://developer.mozilla.org/ko/docs/Web/HTML/Element/a)를 작성하세요.
 
-## Astro Pages
+## Astro 페이지
 
-Astro pages use the `.astro` file extension and support the same features as [Astro components](/en/core-concepts/astro-components/).
+Astro 페이지는 `.astro` 파일 확장자를 사용하며 [Astro components](/ko/core-concepts/astro-components/)와 동일한 기능을 지원합니다.
 
 ```astro
 ---
 // Example: src/pages/index.astro
 ---
-<html lang="en">
+<html lang="ko">
   <head>
-    <title>My Homepage</title>
+    <title>내 홈페이지</title>
   </head>
   <body>
-    <h1>Welcome to my website!</h1>
+    <h1>제 웹사이트에 오신 것을 환영합니다!</h1>
   </body>
 </html>
 ```
 
-To avoid repeating the same HTML elements on every page, you can move common `<head>` and `<body>` elements into your own [layout components](/en/core-concepts/layouts/). You can use as many or as few layout components as you'd like.
+모든 페이지에서 동일한 HTML 요소를 반복하지 않으려면 일반적인 `<head>` 및 `<body>` 요소를 고유한 레이아웃 구성 요소로 이동할 수 있습니다. [layout components](/ko/core-concepts/layouts/)는 원하는 만큼 많이 또는 적게 사용할 수 있습니다.
 
 ```astro {3} /</?MySiteLayout>/
 ---
@@ -53,19 +55,19 @@ To avoid repeating the same HTML elements on every page, you can move common `<h
 import MySiteLayout from '../layouts/MySiteLayout.astro';
 ---
 <MySiteLayout>
-  <p>My page content, wrapped in a layout!</p>
+  <p>레이아웃으로 감싼 페이지 콘텐츠!!</p>
 </MySiteLayout>
 ```
 
-📚 Read more about [layout components](/en/core-concepts/layouts/) in Astro.
+📚 Astro의 [layout components](/ko/core-concepts/layouts/)에 대해 자세히 알아보세요.
 
-## Markdown/MDX Pages
+## 마크다운/MDX 페이지
 
-Astro also treats any Markdown (`.md`) files inside of `src/pages/` as pages in your final website. If you have the [MDX Integration installed](/en/guides/integrations-guide/mdx/#installation), it also treats MDX (`.mdx`) files the same way. These are commonly used for text-heavy pages like blog posts and documentation.
+Astro는 `src/pages/`에 있는 모든 마크다운(`.md`) 파일을 최종 웹사이트의 페이지로 취급합니다. [MDX Integration installed](/ko/guides/integrations-guide/mdx/#installation)를 한 경우 MDX(`.mdx`) 파일도 같은 방식으로 처리합니다. 이러한 파일은 일반적으로 블로그 게시물 및 문서와 같이 텍스트가 많은 페이지에 사용됩니다.
 
-[Collections of Markdown or MDX page content](/en/guides/content-collections/) in `src/content/` can be used to [generate pages dynamically](/en/core-concepts/routing/#dynamic-routes).
+`src/content/`에 있는 [Collections of Markdown or MDX page content](/ko/guides/content-collections/)을 사용하여 [generate pages dynamically](/ko/core-concepts/routing/#dynamic-routes)할 수 있습니다.
 
-Page layouts are especially useful for [Markdown files](#markdownmdx-pages). Markdown files can use the special `layout` frontmatter property to specify a [layout component](/en/core-concepts/layouts/) that will wrap their Markdown content in a full `<html>...</html>` page document.
+페이지 레이아웃은 [마크다운 파일](#마크다운mdx-페이지)에 특히 유용합니다. 마크다운 파일은 `레이아웃` 프론트매터 속성을 사용하여 마크다운 콘텐츠를 전체 `<html>...</html>` 페이지 문서로 감싸는 [layout component](/ko/core-concepts/layouts/)를 지정할 수 있습니다.
 
 ```md {3}
 ---
@@ -73,20 +75,19 @@ Page layouts are especially useful for [Markdown files](#markdownmdx-pages). Mar
 layout: '../layouts/MySiteLayout.astro'
 title: 'My Markdown page'
 ---
-# Title
+# 제목
 
-This is my page, written in **Markdown.**
+마크다운으로 작성된 페이지입니다.
 ```
 
-📚 Read more about [Markdown](/en/guides/markdown-content/) in Astro.
+📚 Astro의 [Markdown](/ko/guides/markdown-content/)에 대해 자세히 알아보세요.
 
-## HTML Pages
+## HTML 페이지
 
-Files with the `.html` file extension can be placed in the `src/pages/` and used directly as pages on your site. Note that some key Astro features are not supported in [HTML Components](/en/core-concepts/astro-components/#html-components).
+파일 확장자가 `.html`인 파일은 `src/pages/`에 작성하여 페이지로 바로 사용할 수 있습니다. [HTML Components](/ko/core-concepts/astro-components/#html-components)는 Astro의 일부 주요 기능을 지원되지 않는다는 점에 유의하세요.
 
-## Custom 404 Error Page
+## 커스텀 404 에러 페이지
 
-For a custom 404 error page, you can create a `404.astro` or `404.md` file in `/src/pages`.
+`/src/pages`에 `404.astro` 또는 `404.md` 파일을 만들어 사용자 정의 404 페이지를 생성할 수 있습니다.
 
-This will build to a `404.html` page. Most [deploy services](/en/guides/deploy/) will find and use it.
-
+생성한 파일은 `404.html` 페이지로 빌드됩니다. 대부분의 배포 서비스는 이 페이지를 찾아서 사용합니다.
