--- a/src/content/docs/fr/guides/backend.mdx
+++ b/src/content/docs/fr/guides/backend.mdx
@@ -5,21 +5,21 @@ i18nReady: true
 ---
 import BackendGuidesNav from '~/components/BackendGuidesNav.astro';
 
-**Prêt à ajouter des fonctionnalités telles que l'authentification, le stockage ou les données à votre projet Astro ?** Suivez l'un de nos guides pour intégrer un service Backend.
+**Prêt à ajouter des fonctionnalités telles que l'authentification, du stockage ou des données à votre projet Astro ?** Suivez l'un de nos guides pour intégrer un service Backend.
 
 ## Guides des services Backend
 
 <BackendGuidesNav />
 
-Notez que beaucoup de ces pages sont des **stubs** : ce sont des collections de ressources qui attendent votre contribution !
+Notez que beaucoup de ces pages sont des **ébauches** : ce sont des collections de ressources qui attendent votre contribution !
 
 ## Qu'est-ce qu'un service Backend ?
 
-Un service Backend est un système basé sur le cloud qui vous aide à créer et à gérer votre infrastructure backend. Il fournit un ensemble d'outils et de services pour la gestion des bases de données, l'authentification des utilisateurs et d'autres fonctionnalités côté serveur. Cela vous permet de vous concentrer sur la création de vos applications sans avoir à vous soucier de la gestion de l'infrastructure sous-jacente.
+Un service Backend est un système basé sur le cloud qui vous aide à créer et à gérer votre infrastructure Backend. Il fournit un ensemble d'outils et de services pour la gestion des bases de données, l'authentification des utilisateurs et d'autres fonctionnalités côté serveur. Cela vous permet de vous concentrer sur la création de vos applications sans avoir à vous soucier de la gestion de l'infrastructure sous-jacente.
 
 ## Pourquoi utiliserais-je un service Backend ?
 
-Vous pouvez envisager un service backend si votre projet a des besoins complexes côté serveur, par exemple :
+Vous pouvez envisager un service Backend si votre projet a des besoins complexes côté serveur, par exemple :
 - inscriptions et authentification des utilisateurs
 - stockage persistant de données
 - stockage de fichiers téléversés par l'utilisateur
