fix wrong links

--- a/src/content/docs/ko/core-concepts/astro-pages.mdx
+++ b/src/content/docs/ko/core-concepts/astro-pages.mdx
@@ -9,10 +9,10 @@ i18nReady: true
 ## 지원하는 페이지 파일들
 
 Astro는 `src/pages/` 디렉터리에서 다음 파일 형식을 지원합니다.
-- [`.astro`](#astro-pages)
-- [`.md`](#markdownmdx-pages)
+- [`.astro`](#astro-페이지)
+- [`.md`](#마크다운mdx-페이지)
 - `.mdx` ([MDX Integration installed](/ko/guides/integrations-guide/mdx/#installation)와 함께)
-- [`.html`](#html-pages)
+- [`.html`](#html-페이지)
 - `.js`/`.ts` ([endpoints](/ko/core-concepts/endpoints/))
 
 ## 파일 기반 라우팅
