--- a/src/content/docs/ko/core-concepts/astro-components.mdx
+++ b/src/content/docs/ko/core-concepts/astro-components.mdx
@@ -28,7 +28,7 @@ Astro 컴포넌트는 **컴포넌트 스크립트**와 **컴포넌트 템플릿*
 
 Astro는 코드 펜스(`---`)를 사용하여 Astro 컴포넌트에서 컴포넌트 스크립트를 식별합니다. 이전에 마크다운을 작성해 본 적이 있다면 *프론트매터*라는 비슷한 개념에 이미 익숙할 것입니다. Astro의 컴포넌트 스크립트 아이디어는 이 개념에서 직접 영감을 받았습니다.
 
-컴포넌트 스크립트를 사용하여 템플릿을 렌더링하는 데 필요한 모든 JavaScript 코드를 작성할 수 있습니다. 여기에는 다음이 포함될 수 있습니다.
+컴포넌트 스크립트를 사용하여 템플릿을 렌더링하는 데 필요한 모든 JavaScript 코드를 작성할 수 있습니다. 여기에는 다음과 같은 것들이 포함될 수 있습니다.
 
 - 다른 Astro 컴포넌트 가져오기
 - React와 같은 다른 프레임워크 컴포넌트 가져오기
