--- a/src/content/docs/ko/core-concepts/astro-pages.mdx
+++ b/src/content/docs/ko/core-concepts/astro-pages.mdx
@@ -84,7 +84,7 @@ title: 'My Markdown page'
 
 ## HTML 페이지
 
-파일 확장자가 `.html`인 파일은 `src/pages/`에 작성하여 페이지로 바로 사용할 수 있습니다. [HTML Components](/ko/core-concepts/astro-components/#html-components)는 Astro의 일부 주요 기능을 지원되지 않는다는 점에 유의하세요.
+파일 확장자가 `.html`인 파일은 `src/pages/`에 작성하여 페이지로 바로 사용할 수 있습니다. [HTML Components](/ko/core-concepts/astro-components/#html-components)는 Astro의 주요 기능의 일부가 지원되지 않는다는 점에 유의하세요.
 
 ## 커스텀 404 에러 페이지
 
