--- a/src/content/docs/ko/core-concepts/astro-pages.mdx
+++ b/src/content/docs/ko/core-concepts/astro-pages.mdx
@@ -17,7 +17,7 @@ Astro는 `src/pages/` 디렉터리에서 다음 파일 형식을 지원합니다
 
 ## 파일 기반 라우팅
 
-Astro는 **파일 기반 라우팅** 전략을 활용합니다. `src/pages/` 디렉터리의 각 파일은 파일 경로에 따라 사이트의 엔드포인트가 됩니다.
+Astro는 **파일 기반 라우팅** 전략을 활용합니다. `src/pages/` 디렉터리 내부의 각 파일 경로는 사이트의 엔드포인트가 됩니다.
 
 Astro leverages a routing strategy called **file-based routing**. Each file in your `src/pages/` directory becomes an endpoint on your site based on its file path.
 
