--- a/src/content/docs/zh-cn/reference/errors/reserved-slot-name.mdx
+++ b/src/content/docs/zh-cn/reference/errors/reserved-slot-name.mdx
@@ -1,9 +1,4 @@
 ---
-# NOTE: This file is auto-generated from 'scripts/error-docgen.mjs'
-# Do not make edits to it directly, they will be overwritten.
-# Instead, change this file: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
-# Translators, please remove this note and the <DontEditWarning/> component.
-
 title: Invalid slot name.
 i18nReady: true
 githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
@@ -13,12 +8,12 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 <DontEditWarning />
 
 
-> **ReservedSlotName**: Unable to create a slot named `SLOT_NAME`. `SLOT_NAME` is a reserved slot name. Please update the name of this slot. (E03016)
+> **ReservedSlotName**: 无法创建名为 `SLOT_NAME` 的插槽。 `SLOT_NAME` 是保留的插槽名称。请更改此插槽的名称。（E03016）
 
-## What went wrong?
-Certain words cannot be used for slot names due to being already used internally.
+## 哪里出了问题？
+某些词语由于已经被内部占用，因此不能作为插槽名称使用。
 
-**See Also:**
--  [Named slots](/en/core-concepts/astro-components/#named-slots)
+**请参阅：**
+-  [命名插槽](/zh-cn/core-concepts/astro-components/#命名插槽)
 
 
