complete translation for E03017

--- a/src/content/docs/zh-cn/reference/errors/no-adapter-installed.mdx
+++ b/src/content/docs/zh-cn/reference/errors/no-adapter-installed.mdx
@@ -1,9 +1,4 @@
 ---
-# NOTE: This file is auto-generated from 'scripts/error-docgen.mjs'
-# Do not make edits to it directly, they will be overwritten.
-# Instead, change this file: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
-# Translators, please remove this note and the <DontEditWarning/> component.
-
 title: Cannot use Server-side Rendering without an adapter.
 i18nReady: true
 githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
@@ -13,13 +8,13 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 <DontEditWarning />
 
 
-> **NoAdapterInstalled**: Cannot use `output: 'server'` without an adapter. Please install and configure the appropriate server adapter for your final deployment. (E03017)
+> **NoAdapterInstalled**: 在没有适配器的情况下，无法使用 `output: 'server'`。请为你的部署目标安装并配置适当的服务器适配器。 (E03017)
 
-## What went wrong?
-To use server-side rendering, an adapter needs to be installed so Astro knows how to generate the proper output for your targeted deployment platform.
+## 哪里出了问题？
+要使用服务器端渲染，需要安装适配器，这样 Astro 才能知道如何为你的目标部署平台生成正确的输出。
 
-**See Also:**
--  [Server-side Rendering](/en/guides/server-side-rendering/)
--  [Adding an Adapter](/en/guides/server-side-rendering/#adding-an-adapter)
+**请参阅：**
+-  [服务端渲染](/zh-cn/guides/server-side-rendering/)
+-  [添加适配器](/zh-cn/guides/server-side-rendering/#添加一个适配器)
 
 
