--- a/src/content/docs/zh-cn/reference/errors/no-adapter-installed.mdx
+++ b/src/content/docs/zh-cn/reference/errors/no-adapter-installed.mdx
@@ -8,7 +8,7 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 <DontEditWarning />
 
 
-> **NoAdapterInstalled**: 在没有适配器的情况下，无法使用 `output: 'server'`。请为你的部署目标安装并配置适当的服务器适配器。 (E03017)
+> **NoAdapterInstalled**: 在没有适配器的情况下，无法使用 `output: 'server'`。请为你的部署目标安装并配置适当的服务器适配器。（E03017）
 
 ## 哪里出了问题？
 要使用服务器端渲染，需要安装适配器，这样 Astro 才能知道如何为你的目标部署平台生成正确的输出。
