complete translation for E03018

--- a/src/content/docs/zh-cn/reference/errors/no-matching-import.mdx
+++ b/src/content/docs/zh-cn/reference/errors/no-matching-import.mdx
@@ -1,9 +1,4 @@
 ---
-# NOTE: This file is auto-generated from 'scripts/error-docgen.mjs'
-# Do not make edits to it directly, they will be overwritten.
-# Instead, change this file: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
-# Translators, please remove this note and the <DontEditWarning/> component.
-
 title: No import found for component.
 i18nReady: true
 githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
@@ -13,10 +8,10 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 <DontEditWarning />
 
 
-> **NoMatchingImport**: Could not render `COMPONENT_NAME`. No matching import has been found for `COMPONENT_NAME`. (E03018)
+> **NoMatchingImport**: 无法渲染 `COMPONENT_NAME` 组件。找不到与 `COMPONENT_NAME` 组件匹配的导入。（E03018）
 
-## What went wrong?
-No import statement was found for one of the components. If there is an import statement, make sure you are using the same identifier in both the imports and the component usage.
+## 哪里出了问题？
+找不到某个组件的导入语句。如果你已经导入了这个组件，请确保你在导入语句和使用组件的地方使用的标识符是一致的。
 
 
 
