--- a/src/content/docs/zh-cn/reference/errors/invalid-prerender-export.mdx
+++ b/src/content/docs/zh-cn/reference/errors/invalid-prerender-export.mdx
@@ -1,9 +1,4 @@
 ---
-# NOTE: This file is auto-generated from 'scripts/error-docgen.mjs'
-# Do not make edits to it directly, they will be overwritten.
-# Instead, change this file: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
-# Translators, please remove this note and the <DontEditWarning/> component.
-
 title: Invalid prerender export.
 i18nReady: true
 githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
@@ -13,11 +8,8 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 <DontEditWarning />
 
 
-> **Example error messages:**<br/>
-InvalidPrerenderExport: A `prerender` export has been detected, but its value cannot be statically analyzed. (E03019)
+> **错误信息示例：**<br/>
+InvalidPrerenderExport: 检测到了一个 `prerender` 预渲染导出，但无法对其值进行静态分析。（E03019）
 
-## What went wrong?
-The `prerender` feature only supports a subset of valid JavaScript — be sure to use exactly `export const prerender = true` so that our compiler can detect this directive at build time. Variables, `let`, and `var` declarations are not supported.
-
-
-
+## 哪里出了问题？
+`prerender` 预渲染功能只支持 JavaScript 的部分语法 - 请确保一字不差地使用 `export const prerender = true`，这样我们的编译器在构建时才能识别这个指令。不支持使用变量、`let` 和 `var` 声明。
