complete translation for E03020

--- a/src/content/docs/zh-cn/reference/errors/invalid-component-args.mdx
+++ b/src/content/docs/zh-cn/reference/errors/invalid-component-args.mdx
@@ -1,9 +1,4 @@
 ---
-# NOTE: This file is auto-generated from 'scripts/error-docgen.mjs'
-# Do not make edits to it directly, they will be overwritten.
-# Instead, change this file: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
-# Translators, please remove this note and the <DontEditWarning/> component.
-
 title: Invalid component arguments.
 i18nReady: true
 githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
@@ -13,11 +8,8 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 <DontEditWarning />
 
 
-> **Example error messages:**<br/>
-InvalidComponentArgs: Invalid arguments passed to `<MyAstroComponent>` component. (E03020)
+> **错误信息示例：**<br/>
+InvalidComponentArgs: 向 `<MyAstroComponent>` 组件传递了无效的参数。（E03020）
 
-## What went wrong?
-Astro components cannot be rendered manually via a function call, such as `Component()` or `{items.map(Component)}`. Prefer the component syntax `<Component />` or `{items.map(item => <Component {...item} />)}`.
-
-
-
+## 哪里出了问题？
+Astro 组件不能通过函数调用的方式手动渲染，如 `Component()` 或 `{items.map(Component)}`。请使用组件语法 `<Component />` 或 `{items.map(item => <Component {...item} />)}`。
