--- a/src/content/docs/en/guides/backend/google-firebase.mdx
+++ b/src/content/docs/en/guides/backend/google-firebase.mdx
@@ -203,10 +203,10 @@ export const get: APIRoute = async ({ request, cookies, redirect }) => {
     );
   }
 
-  /* Verify the token */
-  const decodedToken = await auth.verifyIdToken(idToken).catch(() => null);
-
-  if (!decodedToken) {
+  /* Verify id token */
+  try {
+    await auth.verifyIdToken(idToken);
+  } catch (error) {
     return new Response(
       JSON.stringify({
         error: "Invalid token",
@@ -215,16 +215,14 @@ export const get: APIRoute = async ({ request, cookies, redirect }) => {
     );
   }
 
-  const fiveDays = 60 * 60 * 24 * 5 * 1000;
-
   /* Create and set session cookie */
+  const fiveDays = 60 * 60 * 24 * 5 * 1000;
   const sessionCookie = await auth.createSessionCookie(idToken, {
     expiresIn: fiveDays,
   });
 
   cookies.set("session", sessionCookie, {
     path: "/",
-    // more options
   });
 
   return redirect("/dashboard");
@@ -333,19 +331,21 @@ The example `src/pages/register.astro` below includes a form that will send a `P
 ---
 import Layout from "../layouts/Layout.astro";
 ---
+
 <Layout title="Register">
-	<h1>Register</h1>
+  <h1>Register</h1>
   <p>Already have an account? <a href="/signin">Sign in</a></p>
-	<form action="/api/auth/register" method="post">
+  <form action="/api/auth/register" method="post">
     <label for="name">Name</label>
     <input type="text" name="name" id="name" />
     <label for="email" for="email">Email</label>
-		<input type="email" name="email" id="email" />
+    <input type="email" name="email" id="email" />
     <label for="password">Password</label>
-		<input type="password" name="password" id="password" />
-		<button type="submit">Login</button>
-	</form>
+    <input type="password" name="password" id="password" />
+    <button type="submit">Login</button>
+  </form>
 </Layout>
+
 ```
 
 `src/pages/signin.astro` uses the Firebase server app to verify the user's session cookie. If the user is authenticated, the page will redirect the user to the `/dashboard` page.
@@ -372,47 +372,57 @@ if (sessionCookie) {
 ---
 
 <Layout title="Sign in">
-	<h1>Sign in</h1>
+  <h1>Sign in</h1>
   <p>New here? <a href="/register">Create an account</a></p>
-	<form action="/api/auth/signin" method="post">
+  <form action="/api/auth/signin" method="post">
     <label for="email" for="email">Email</label>
-		<input type="email" name="email" id="email" />
+    <input type="email" name="email" id="email" />
     <label for="password">Password</label>
-		<input type="password" name="password" id="password" />
-		<button type="submit">Login</button>
-	</form>
+    <input type="password" name="password" id="password" />
+    <button type="submit">Login</button>
+  </form>
 </Layout>
 <script>
-  import { getAuth, inMemoryPersistence, signInWithEmailAndPassword } from "firebase/auth"
-  import { app } from "../firebase/client"
+  import {
+    getAuth,
+    inMemoryPersistence,
+    signInWithEmailAndPassword,
+  } from "firebase/auth";
+  import { app } from "../firebase/client";
 
   const auth = getAuth(app);
-  auth.setPersistence(inMemoryPersistence)
+  // This will prevent the browser from storing session data
+  auth.setPersistence(inMemoryPersistence);
 
-  const form = document.querySelector('form') as HTMLFormElement;
-  form.addEventListener('submit', async (e) => {
+  const form = document.querySelector("form") as HTMLFormElement;
+  form.addEventListener("submit", async (e) => {
     e.preventDefault();
     const formData = new FormData(form);
-    const email = formData.get('email')?.toString();
-    const password = formData.get('password')?.toString();
+    const email = formData.get("email")?.toString();
+    const password = formData.get("password")?.toString();
 
     if (!email || !password) {
       return;
     }
-    const userCredential = await signInWithEmailAndPassword(auth, email, password)
+    const userCredential = await signInWithEmailAndPassword(
+      auth,
+      email,
+      password
+    );
     const idToken = await userCredential.user.getIdToken();
-    const response = await fetch('/api/auth/signin', {
-      method: 'GET',
+    const response = await fetch("/api/auth/signin", {
+      method: "GET",
       headers: {
-        'Authorization': `Bearer ${idToken}`
-      }
-    })
-    
+        Authorization: `Bearer ${idToken}`,
+      },
+    });
+
     if (response.redirected) {
-      window.location.assign(response.url)
+      window.location.assign(response.url);
     }
   });
 </script>
+
 ```
 
 `src/pages/dashboard.astro` will verify the user's session cookie using the Firebase server app. If the user is not authenticated, the page will redirect the user to the `/signin` page.
@@ -442,14 +452,14 @@ if (!user) {
   return Astro.redirect("/signin");
 }
 ---
+
 <Layout title="dashboard">
-	<h1>Welcome {user.displayName}</h1>
-	<p>We are happy to see you here</p>
+  <h1>Welcome {user.displayName}</h1>
+  <p>We are happy to see you here</p>
   <form action="/api/auth/signout">
     <button type="submit">Sign out</button>
   </form>
 </Layout>
-</html>
 ```
 
 ### Adding OAuth providers
@@ -465,7 +475,7 @@ Edit the `signin.astro` page to add:
 - a button to sign in with Google underneath the existing form
 - an event listener on the button to handle the sign in process in the existing `<script>`.
 
-```astro title="src/pages/signin.astro" ins={27, 34, 35, 65-78}
+```astro title="src/pages/signin.astro" ins={27, 34, 35, 69-83}
 ---
 import { app } from "../firebase/server";
 import { getAuth } from "firebase-admin/auth";
@@ -483,15 +493,15 @@ if (sessionCookie) {
 ---
 
 <Layout title="Sign in">
-	<h1>Sign in</h1>
+  <h1>Sign in</h1>
   <p>New here? <a href="/register">Create an account</a></p>
-	<form action="/api/auth/signin" method="post">
+  <form action="/api/auth/signin" method="post">
     <label for="email" for="email">Email</label>
-		<input type="email" name="email" id="email" />
+    <input type="email" name="email" id="email" />
     <label for="password">Password</label>
-		<input type="password" name="password" id="password" />
-		<button type="submit">Login</button>
-	</form>
+    <input type="password" name="password" id="password" />
+    <button type="submit">Login</button>
+  </form>
   <button id="google">Sign in with Google</button>
 </Layout>
 <script>
@@ -502,49 +512,55 @@ if (sessionCookie) {
     GoogleAuthProvider,
     signInWithPopup,
   } from "firebase/auth";
-  import { app } from "../firebase/client"
+  import { app } from "../firebase/client";
 
   const auth = getAuth(app);
-  auth.setPersistence(inMemoryPersistence)
+  auth.setPersistence(inMemoryPersistence);
 
-  const form = document.querySelector('form') as HTMLFormElement;
-  form.addEventListener('submit', async (e) => {
+  const form = document.querySelector("form") as HTMLFormElement;
+  form.addEventListener("submit", async (e) => {
     e.preventDefault();
     const formData = new FormData(form);
-    const email = formData.get('email')?.toString();
-    const password = formData.get('password')?.toString();
+    const email = formData.get("email")?.toString();
+    const password = formData.get("password")?.toString();
 
     if (!email || !password) {
       return;
     }
-    const userCredential = await signInWithEmailAndPassword(auth, email, password)
+    const userCredential = await signInWithEmailAndPassword(
+      auth,
+      email,
+      password
+    );
     const idToken = await userCredential.user.getIdToken();
-    const response = await fetch('/api/auth/signin', {å
+    const response = await fetch("/api/auth/signin", {
       headers: {
-        'Authorization': `Bearer ${idToken}`
-      }
-    })
-    
+        Authorization: `Bearer ${idToken}`,
+      },
+    });
+
     if (response.redirected) {
-      window.location.assign(response.url)
+      window.location.assign(response.url);
     }
   });
 
-  const googleSignin = document.querySelector('#google') as HTMLButtonElement;
+  const googleSignin = document.querySelector("#google") as HTMLButtonElement;
   googleSignin.addEventListener("click", async () => {
     const provider = new GoogleAuthProvider();
     const userCredential = await signInWithPopup(auth, provider);
     const idToken = await userCredential.user.getIdToken();
     const res = await fetch("/api/auth/signin", {
-    headers: {
-      Authorization: `Bearer ${idToken}`,
-    },
-  });
+      headers: {
+        Authorization: `Bearer ${idToken}`,
+      },
+    });
 
-  if (res.redirected) {
-    window.location.assign(res.url);
-  }})
+    if (res.redirected) {
+      window.location.assign(res.url);
+    }
+  });
 </script>
+
 ```
 
 When clicked, the Google sign in button will open a popup window to sign in with Google. Once the user signs in, it will send a `POST` request to the `/api/auth/signin` endpoint with the ID token generated by OAuth provider. 
@@ -668,7 +684,7 @@ export const del: APIRoute = async ({ params, redirect }) => {
     console.error(error);
   }
   return redirect("/dashboard");
-}
+};
 ```
 
 :::note
@@ -733,9 +749,9 @@ If the user clicks the delete button, this page will send a `DELETE` request to 
 
 ```astro title="src/pages/edit/[id].astro"
 ---
-import Layout from '../../layouts/Layout.astro'
-import { app } from '../../firebase/server'
-import { getFirestore } from 'firebase-admin/firestore'
+import Layout from "../../layouts/Layout.astro";
+import { app } from "../../firebase/server";
+import { getFirestore } from "firebase-admin/firestore";
 
 interface Friend {
   name: string;
@@ -743,22 +759,23 @@ interface Friend {
   isBestFriend: boolean;
 }
 
-const { id } = Astro.params
+const { id } = Astro.params;
 
 if (!id) {
-  return Astro.redirect('/404')
+  return Astro.redirect("/404");
 }
 
-const db = getFirestore(app)
+const db = getFirestore(app);
 const friendsRef = db.collection("friends");
-const friendSnapshot = await friendsRef.doc(id).get()
+const friendSnapshot = await friendsRef.doc(id).get();
 
 if (!friendSnapshot.exists) {
-  return Astro.redirect('/404')
+  return Astro.redirect("/404");
 }
 
-const friend = friendSnapshot.data() as Friend
+const friend = friendSnapshot.data() as Friend;
 ---
+
 <Layout title="Edit {friend.name}">
   <h1>Edit {friend.name}</h1>
   <p>Here you can edit or delete your friend's data.</p>
@@ -768,22 +785,29 @@ const friend = friendSnapshot.data() as Friend
     <label for="age">Age</label>
     <input type="number" id="age" name="age" value={friend.age} />
     <label for="isBestFriend">Is best friend?</label>
-    <input type="checkbox" id="isBestFriend" name="isBestFriend" checked={friend.isBestFriend}/>
+    <input
+      type="checkbox"
+      id="isBestFriend"
+      name="isBestFriend"
+      checked={friend.isBestFriend}
+    />
     <button type="submit">Edit friend</button>
   </form>
   <button type="button" id="delete-document">Delete</button>
 </Layout>
 <script>
-  const deleteButton = document.getElementById('delete-document') as HTMLButtonElement
-  const url = document.querySelector('form')?.getAttribute('action') as string
-  deleteButton.addEventListener('click', async () => {
+  const deleteButton = document.getElementById(
+    "delete-document"
+  ) as HTMLButtonElement;
+  const url = document.querySelector("form")?.getAttribute("action") as string;
+  deleteButton.addEventListener("click", async () => {
     const response = await fetch(url, {
-      method: 'DELETE'
-    })
+      method: "DELETE",
+    });
     if (response.redirected) {
-      window.location.assign(response.url)
+      window.location.assign(response.url);
     }
-  })
+  });
 </script>
 ```
 
@@ -793,9 +817,9 @@ const friend = friendSnapshot.data() as Friend
 
 ```astro title="src/pages/friend/[id].astro"
 ---
-import Layout from '../../layouts/Layout.astro'
-import { app } from '../../firebase/server'
-import { getFirestore } from 'firebase-admin/firestore'
+import Layout from "../../layouts/Layout.astro";
+import { app } from "../../firebase/server";
+import { getFirestore } from "firebase-admin/firestore";
 
 interface Friend {
   name: string;
@@ -803,26 +827,27 @@ interface Friend {
   isBestFriend: boolean;
 }
 
-const { id } = Astro.params
+const { id } = Astro.params;
 
 if (!id) {
-  return Astro.redirect('/404')
+  return Astro.redirect("/404");
 }
 
-const db = getFirestore(app)
+const db = getFirestore(app);
 const friendsRef = db.collection("friends");
-const friendSnapshot = await friendsRef.doc(id).get()
+const friendSnapshot = await friendsRef.doc(id).get();
 
 if (!friendSnapshot.exists) {
-  return Astro.redirect('/404')
+  return Astro.redirect("/404");
 }
 
-const friend = friendSnapshot.data() as Friend
+const friend = friendSnapshot.data() as Friend;
 ---
+
 <Layout title={friend.name}>
   <h1>{friend.name}</h1>
   <p>Age: {friend.age}</p>
-  <p>Is best friend: {friend.isBestFriend ? 'Yes' : 'No'}</p>
+  <p>Is best friend: {friend.isBestFriend ? "Yes" : "No"}</p>
 </Layout>
 ```
 
