feat: translated first paragraph

--- a/src/content/docs/ko/core-concepts/layouts.mdx
+++ b/src/content/docs/ko/core-concepts/layouts.mdx
@@ -1,14 +1,14 @@
 ---
-title: Layouts
-description: An intro to layouts, a type of Astro component that is shared between pages for common layouts
+title: 레이아웃
+description: 레이아웃 소개, 공통 레이아웃을 위해 페이지 간에 공유되는 Astro 컴포넌트의 한 유형입니다.
 i18nReady: true
 ---
 
-**Layouts** are [Astro components](/en/core-concepts/astro-components/) used to provide a reusable UI structure, such as a page template.
+**레이아웃**은 페이지 템플릿과 같은 재사용 가능한 UI 구조를 제공하는 데 사용되는 [Astro 컴포넌트](/en/core-concepts/astro-components/)입니다.
 
-We conventionally use the term "layout" for Astro components that provide common UI elements shared across pages such as headers, navigation bars, and footers. A typical Astro layout component provides [Astro, Markdown or MDX pages](/en/core-concepts/astro-pages/) with:
-- a **page shell** (`<html>`, `<head>` and `<body>` tags)
-- a [**`<slot />`**](/en/core-concepts/astro-components/#slots) to specify where individual page content should be injected.
+우리는 일반적으로 headers, navigation bars 및 footers과 같은 페이지 간에 공유되는 공통 UI 요소를 제공하는 Astro 컴포넌트에 대해 "레이아웃"이라는 용어를 사용합니다. 전형적인 Astro 레이아웃 컴포넌트는 [Astro, Markdown 또는 MDX 페이지](/en/core-concepts/astro-pages/)에 다음 기능을 제공합니다.
+- 페이지 쉘 (`<html>`, `<head>` 및 `<body>` 태그들)
+- 개별 페이지 내용을 작성할 위치를 지정하는 [**`<slot />`**](/en/core-concepts/astro-components/#slots)
 
  But, there is nothing special about a layout component! They can [accept props](/en/core-concepts/astro-components/#component-props) and [import and use other components](/en/core-concepts/astro-components/#component-structure) like any other Astro component. They can include [UI frameworks components](/en/core-concepts/framework-components/) and [client-side scripts](/en/guides/client-side-scripts/). They do not even have to provide a full page shell, and can instead be used as partial UI templates.
 
