--- a/src/content/docs/ko/core-concepts/layouts.mdx
+++ b/src/content/docs/ko/core-concepts/layouts.mdx
@@ -10,11 +10,11 @@ i18nReady: true
 - 페이지 쉘 (`<html>`, `<head>` 및 `<body>` 태그들)
 - 개별 페이지 내용을 작성할 위치를 지정하는 [**`<slot />`**](/en/core-concepts/astro-components/#slots)
 
- But, there is nothing special about a layout component! They can [accept props](/en/core-concepts/astro-components/#component-props) and [import and use other components](/en/core-concepts/astro-components/#component-structure) like any other Astro component. They can include [UI frameworks components](/en/core-concepts/framework-components/) and [client-side scripts](/en/guides/client-side-scripts/). They do not even have to provide a full page shell, and can instead be used as partial UI templates.
+ 하지만 레이아웃 구성 요소에 특별한 것이 없습니다! 그들은 [props을 받고](/en/core-concepts/astro-components/#component-props) 다른 Astro 컴포넌트처럼 다른 컴포넌트를 [가져와서 사용할 수 있습니다]((/en/core-concepts/astro-components/#component-structure)). [UI 프레임워크 컴포넌트](/en/core-concepts/framework-components/) 및 [클라이언트 사이드 스크립트](/en/guides/client-side-scripts/)를 포함할 수 있습니다. 전체 페이지 셸을 제공할 필요도 없으며 부분 UI 템플릿으로 대신해서 사용할 수도 있습니다.
 
-Layout components are commonly placed in a `src/layouts` directory in your project for organization, but this is not a requirement.
+레이아웃 컴포넌트는 일반적으로 당신의 프로젝트 구성을 위해 `src/layouts` 디렉터리에 배치됩니다. 그러나 필수 사항은 아닙니다.
 
-## Sample Layout
+## Layout 예시
 
 **`src/layouts/MySiteLayout.astro`**
 
@@ -55,7 +55,7 @@ import MySiteLayout from '../layouts/MySiteLayout.astro';
 ```
 
 
-📚 Learn more about [slots](/en/core-concepts/astro-components/#slots).
+📚 [슬롯](/en/core-concepts/astro-components/#slots)에 대해 자세히 알아봅니다.
 
 ## Markdown/MDX Layouts
 
