--- a/src/content/docs/ko/core-concepts/layouts.mdx
+++ b/src/content/docs/ko/core-concepts/layouts.mdx
@@ -6,11 +6,11 @@ i18nReady: true
 
 **레이아웃**은 페이지 템플릿과 같은 재사용 가능한 UI 구조를 제공하는 데 사용되는 [Astro 컴포넌트](/en/core-concepts/astro-components/)입니다.
 
-우리는 일반적으로 headers, navigation bars 및 footers과 같은 페이지 간에 공유되는 공통 UI 요소를 제공하는 Astro 컴포넌트에 대해 "레이아웃"이라는 용어를 사용합니다. 전형적인 Astro 레이아웃 컴포넌트는 [Astro, Markdown 또는 MDX 페이지](/en/core-concepts/astro-pages/)에 다음 기능을 제공합니다.
+우리는 일반적으로 headers, navigation bars 및 footers과 같은 페이지 간에 공유되는 공통 UI 요소를 제공하는 Astro 컴포넌트에 대해 "레이아웃"이라는 용어를 사용합니다. 일반적인 Astro 레이아웃 컴포넌트는 [Astro, Markdown 또는 MDX 페이지](/en/core-concepts/astro-pages/)에 다음 기능을 제공합니다.
 - 페이지 쉘 (`<html>`, `<head>` 및 `<body>` 태그들)
-- 개별 페이지 내용을 작성할 위치를 지정하는 [**`<slot />`**](/en/core-concepts/astro-components/#slots)
+- 개별 페이지 내용이 들어갈 위치를 지정하는 [**`<slot />`**](/en/core-concepts/astro-components/#slots)
 
- 하지만 레이아웃 구성 요소에 특별한 것이 없습니다! 그들은 [props을 받고](/en/core-concepts/astro-components/#component-props) 다른 Astro 컴포넌트처럼 다른 컴포넌트를 [가져와서 사용할 수 있습니다]((/en/core-concepts/astro-components/#component-structure)). [UI 프레임워크 컴포넌트](/en/core-concepts/framework-components/) 및 [클라이언트 사이드 스크립트](/en/guides/client-side-scripts/)를 포함할 수 있습니다. 전체 페이지 셸을 제공할 필요도 없으며 부분 UI 템플릿으로 대신해서 사용할 수도 있습니다.
+ 하지만 레이아웃 구성 요소에 특별한 것은 없습니다! 그들은 [props을 받고](/en/core-concepts/astro-components/#component-props) 다른 Astro 컴포넌트처럼 다른 컴포넌트를 [가져와서 사용할 수 있습니다](/en/core-concepts/astro-components/#component-structure). [UI 프레임워크 컴포넌트](/en/core-concepts/framework-components/) 및 [클라이언트 사이드 스크립트](/en/guides/client-side-scripts/)를 포함할 수 있습니다. 전체 페이지 셸을 제공할 필요도 없으며 부분 UI 템플릿으로 대신해서 사용할 수도 있습니다.
 
 레이아웃 컴포넌트는 일반적으로 당신의 프로젝트 구성을 위해 `src/layouts` 디렉터리에 배치됩니다. 그러나 필수 사항은 아닙니다.
 
@@ -38,7 +38,7 @@ const { title } = Astro.props
     </nav>
     <h1>{title}</h1>
     <article>
-      <slot /> <!-- your content is injected here -->
+      <slot /> <!-- 당신의 켄텐츠는 이곳에 들어 갑니다. -->
     </article>
     <Footer />
   </body>
@@ -57,11 +57,11 @@ import MySiteLayout from '../layouts/MySiteLayout.astro';
 
 📚 [슬롯](/en/core-concepts/astro-components/#slots)에 대해 자세히 알아봅니다.
 
-## Markdown/MDX Layouts
+## 마크다운/MDX 레이아웃
 
-Page layouts are especially useful for [Markdown and MDX pages](/en/guides/markdown-content/#markdown-and-mdx-pages) which otherwise would not have any page formatting. 
+페이지 레이아웃은 페이지 형식이 없는 [마크다운 및 MDX 페이지](/en/guides/markdown-content/#markdown-and-mdx-pages)에 특히 유용합니다.
 
-Astro provides a special `layout` frontmatter property to specify which `.astro` component to use as the page layout.
+Astro는 페이지 레이아웃으로 사용할 ".astro" 컴포넌트를 지정하는 특별한 `레이아웃` frontmatter 프로퍼티를 제공합니다.
 
 ```markdown title="src/pages/page.md" {2} 
 ---
@@ -78,10 +78,10 @@ You can use it in both Markdown and MDX files located within `src/pages/`.
 
 ```
 
-A typical layout for Markdown or MDX pages includes:
+마크다운 또는 MDX 페이지의 일반적인 레이아웃은 다음과 같습니다.
 
-1. The `frontmatter` prop to access the Markdown or MDX page's frontmatter and other data. 
-2. A default [`<slot />`](/en/core-concepts/astro-components/#slots) to indicate where the page's Markdown/MDX content should be rendered.
+1. 마크다운 또는 MDX 페이지의 서문 및 기타 데이터에 접근할 수 있는 `frontmatter` prop 입니다.  
+2. 페이지의 마크다운/MDX 내용을 렌더링할 위치를 나타내는 기본 [`<slot />`](/en/core-concepts/astro-components/#slots)입니다.
 
 ```astro /(?<!//.*){?frontmatter(?:\\.\w+)?}?/ "<slot />"
 ---
@@ -104,7 +104,7 @@ const { frontmatter } = Astro.props;
 </html>
 ```
 
-You can set a layout’s [`Props` type](/en/guides/typescript/#component-props) with the `MarkdownLayoutProps` or `MDXLayoutProps` helper:
+`MarkdownLayoutProps` 또는 `MDXLayoutProps` 헬퍼를 사용하여 레이아웃의 [`Props` type](/en/guides/typescript/#component-props)을 설정할 수 있습니다. 
 
 ```astro title="src/layouts/BaseLayout.astro" ins={2,4-9}
 ---
@@ -134,20 +134,20 @@ const { frontmatter, url } = Astro.props;
 </html>
 ```
 
-### Markdown Layout Props
+### 마크다운 레이아웃 Props
 
-A Markdown/MDX layout will have access to the following information via `Astro.props`:
+마크다운/MDX 레이아웃은 `Astro.props`를 통해 다음과 같은 정보에 접근할 수 있습니다.
 
-- **`file`** - The absolute path of this file (e.g. `/home/user/projects/.../file.md`).
-- **`url`** - If it's a page, the URL of the page (e.g. `/en/guides/markdown-content`).
-- **`frontmatter`** - all frontmatter from the Markdown or MDX document.
-  - **`frontmatter.file`** - The same as the top-level `file` property.
-  - **`frontmatter.url`** - The same as the top-level `url` property.
-- **`headings`** - A list of headings (`h1 -> h6`) in the Markdown or MDX document with associated metadata. This list follows the type: `{ depth: number; slug: string; text: string }[]`.
-- **(Markdown only) `rawContent()`** - A function that returns the raw Markdown document as a string.
-- **(Markdown only) `compiledContent()`** - A function that returns the Markdown document compiled to an HTML string.
+- **`file`** - 해당 파일의 절대 경로 (예: `/home/user/projects/.../file.md`).
+- **`url`** - 페이지인 경우 페이지의 URL (예: `/en/guides/markdown-content`).
+- **`frontmatter`** - 마크다운 또는 MDX 문서에서 모든 서문.
+  - **`frontmatter.file`** - 최상위 레벨의 `file` 프로퍼티와 동일.
+  - **`frontmatter.url`** - 최상위 레벨의 `url` 프로퍼티와 동일.
+- **`headings`** - 마크다운의 (`h1 -> h6`)제목 목록 또는 MDX 문서의 메타데이터가 연결되어 있습니다. 해당 목록은 다음과 같은 유형을 따릅니다. `{ depth: number; slug: string; text: string }[]`.
+- **(마크다운 전용) `rawContent()`** - 원시 마크다운 문서를 문자열로 반환하는 함수입니다.
+- **(마크다운 전용) `compiledContent()`** -  HTML 문자열로 컴파일된 마크다운 문서를 반환하는 함수입니다.
 
-An example Markdown blog post may pass the following `Astro.props` object to its layout:
+마크다운 블로그 게시물의 예는 다음 `Astro.props` 객체를 해당 레이아웃에 전달할 수 있습니다.
 
 ```js
 Astro.props = {
