--- a/src/content/docs/en/core-concepts/project-structure.mdx
+++ b/src/content/docs/en/core-concepts/project-structure.mdx
@@ -120,7 +120,7 @@ See the [TypeScript Guide](/en/guides/typescript/) for details on setting config
 
 ### `src/content`
 
-The `src/content` directory powers [Content Collections](/en/guides/content-collections/). Only content collections are allowed inside the src/content directory.
+The `src/content` directory powers [Content Collections](/en/guides/content-collections/), so only content collections are allowed inside it.
 
 ### `src/assets`
 
