Apply suggestions from code review
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/content/docs/en/core-concepts/project-structure.mdx
+++ b/src/content/docs/en/core-concepts/project-structure.mdx
@@ -118,10 +118,10 @@ This file is generated in every starter template and includes TypeScript configu
 
 See the [TypeScript Guide](/en/guides/typescript/) for details on setting configurations.
 
-### `src/content`
+### `src/content/`
 
-The `src/content` directory powers [Content Collections](/en/guides/content-collections/), so only content collections are allowed inside it.
+The `src/content/` directory is used to store [content collections](/en/guides/content-collections/) and an optional collections configuration file. No other files are allowed inside this folder
 
-### `src/assets`
+### `src/assets/`
 
-The [`src/assets`](/en/guides/assets/) directory is used to store assets that are processed by Astro. While not required, this directory is the [recommended convention](/en/guides/assets/#move-your-images-to-srcassets) and it's recommended to use this directory for your assets.
+The [`src/assets`](/en/guides/assets/) directory is the recommended folder to use for storing assets (e.g. images) that are processed by Astro. This is not required, and this is not a special reserved folder.
