--- a/src/content/docs/en/reference/directives-reference.mdx
+++ b/src/content/docs/en/reference/directives-reference.mdx
@@ -171,6 +171,12 @@ If the component is already hidden and shown by a media query in your CSS, then 
 <SomeSolidComponent client:only="solid-js" />
 ```
 
+### Custom Client Directives
+
+Since Astro 2.5.0, integrations can also add custom client directives through the [experimental `addClientDirective` API](/en/reference/integrations-reference/#addclientdirective-option). You can use custom `client:*` directives to change how and when components should be hydrated.
+
+Visit the [`addClientDirective` API](/en/reference/integrations-reference/#addclientdirective-option) page to learn more about creating a custom client directive.
+
 ## Script & Style Directives
 
 These directives can only be used on HTML `<script>` and `<style>` tags, to control how your client-side JavaScript and CSS are handled on the page.
