feat: complete translating about layouts of Astro

--- a/src/content/docs/ko/core-concepts/layouts.mdx
+++ b/src/content/docs/ko/core-concepts/layouts.mdx
@@ -8,9 +8,9 @@ i18nReady: true
 
 우리는 일반적으로 headers, navigation bars 및 footers과 같은 페이지 간에 공유되는 공통 UI 요소를 제공하는 Astro 컴포넌트에 대해 "레이아웃"이라는 용어를 사용합니다. 일반적인 Astro 레이아웃 컴포넌트는 [Astro, Markdown 또는 MDX 페이지](/en/core-concepts/astro-pages/)에 다음 기능을 제공합니다.
 - 페이지 쉘 (`<html>`, `<head>` 및 `<body>` 태그들)
-- 개별 페이지 내용이 들어갈 위치를 지정하는 [**`<slot />`**](/en/core-concepts/astro-components/#slots)
+- 개별 페이지 내용이 삽입될 위치를 지정하는 [**`<slot />`**](/en/core-concepts/astro-components/#slots)
 
- 하지만 레이아웃 구성 요소에 특별한 것은 없습니다! 그들은 [props을 받고](/en/core-concepts/astro-components/#component-props) 다른 Astro 컴포넌트처럼 다른 컴포넌트를 [가져와서 사용할 수 있습니다](/en/core-concepts/astro-components/#component-structure). [UI 프레임워크 컴포넌트](/en/core-concepts/framework-components/) 및 [클라이언트 사이드 스크립트](/en/guides/client-side-scripts/)를 포함할 수 있습니다. 전체 페이지 셸을 제공할 필요도 없으며 부분 UI 템플릿으로 대신해서 사용할 수도 있습니다.
+ 하지만 레이아웃 구성 요소에 특별한 것은 없습니다! 그들은 [props을 받고](/en/core-concepts/astro-components/#component-props) 다른 Astro 컴포넌트처럼 다른 컴포넌트를 [가져와서 사용](/en/core-concepts/astro-components/#component-structure)할 수 있습니다. [UI 프레임워크 컴포넌트](/en/core-concepts/framework-components/) 및 [클라이언트 사이드 스크립트](/en/guides/client-side-scripts/)를 포함할 수 있습니다. 전체 페이지 셸을 제공할 필요도 없으며 부분 UI 템플릿으로 대신해서 사용할 수도 있습니다.
 
 레이아웃 컴포넌트는 일반적으로 당신의 프로젝트 구성을 위해 `src/layouts` 디렉터리에 배치됩니다. 그러나 필수 사항은 아닙니다.
 
@@ -38,7 +38,7 @@ const { title } = Astro.props
     </nav>
     <h1>{title}</h1>
     <article>
-      <slot /> <!-- 당신의 켄텐츠는 이곳에 들어 갑니다. -->
+      <slot /> <!-- 당신의 켄텐츠는 이곳에 삽입됩니다. -->
     </article>
     <Footer />
   </body>
@@ -70,34 +70,34 @@ title: "Hello, World!"
 author: "Matthew Phillips"
 date: "09 Aug 2022"
 ---
-All frontmatter properties are available as props to an Astro layout component.
+모든 frontmatter 프로퍼티들은 Astro 레아이웃 컴포넌트에 대한 props로 사용할 수 있습니다.
 
-The `layout` property is the only special one provided by Astro.
+`layout`프로퍼티는 Astro에서 제공하는 유일하고 특별한 프로퍼티입니다.
 
-You can use it in both Markdown and MDX files located within `src/pages/`.
+`src/pages/`에 있는 마크다운 및 MDX파일 모두에서 사용할 수 있습니다.
 
 ```
 
 마크다운 또는 MDX 페이지의 일반적인 레이아웃은 다음과 같습니다.
 
-1. 마크다운 또는 MDX 페이지의 서문 및 기타 데이터에 접근할 수 있는 `frontmatter` prop 입니다.  
+1. 마크다운 또는 MDX 페이지의 frontmatter 및 기타 데이터에 접근할 수 있는 `frontmatter` prop 입니다.  
 2. 페이지의 마크다운/MDX 내용을 렌더링할 위치를 나타내는 기본 [`<slot />`](/en/core-concepts/astro-components/#slots)입니다.
 
 ```astro /(?<!//.*){?frontmatter(?:\\.\w+)?}?/ "<slot />"
 ---
 // src/layouts/BaseLayout.astro
-// 1. The frontmatter prop gives access to frontmatter and other data
+// 1. frontmatter prop은 frontmatter 및 기타 데이터에 대한 접근을 제공합니다.
 const { frontmatter } = Astro.props;
 ---
 <html>
   <head>
-    <!-- Add other Head elements here, like styles and meta tags. -->
+    <!-- 여기에 스타일 및 메타태그와 같은 다른 Head 요소들을 추가합니다. -->
     <title>{frontmatter.title}</title>
   </head>
   <body>
-    <!-- Add other UI components here, like common headers and footers. -->
+    <!-- 여기에 일반 headers 및 footers와 같은 다른 UI 컴포넌트들을 추가합니다. -->
     <h1>{frontmatter.title} by {frontmatter.author}</h1>
-    <!-- 2. Rendered HTML will be passed into the default slot. -->
+    <!-- 2. 렌더링된 HTML은 기본 slot으로 전달됩니다. -->
     <slot />
     <p>Written on: {frontmatter.date}</p>
   </body>
@@ -117,8 +117,8 @@ type Props = MarkdownLayoutProps<{
   date: string;
 }>;
 
-// Now, `frontmatter`, `url`, and other Markdown layout properties
-// are accessible with type safety
+// 이제, `frontmatter`, `url`, 그리고 다른 마크다운 레이아웃 프로퍼티들은
+// 안전한 타입으로 접근이 가능합니다.
 const { frontmatter, url } = Astro.props;
 ---
 <html>
@@ -140,7 +140,7 @@ const { frontmatter, url } = Astro.props;
 
 - **`file`** - 해당 파일의 절대 경로 (예: `/home/user/projects/.../file.md`).
 - **`url`** - 페이지인 경우 페이지의 URL (예: `/en/guides/markdown-content`).
-- **`frontmatter`** - 마크다운 또는 MDX 문서에서 모든 서문.
+- **`frontmatter`** - 마크다운 또는 MDX 문서에서의 모든 frontmatter.
   - **`frontmatter.file`** - 최상위 레벨의 `file` 프로퍼티와 동일.
   - **`frontmatter.url`** - 최상위 레벨의 `url` 프로퍼티와 동일.
 - **`headings`** - 마크다운의 (`h1 -> h6`)제목 목록 또는 MDX 문서의 메타데이터가 연결되어 있습니다. 해당 목록은 다음과 같은 유형을 따릅니다. `{ depth: number; slug: string; text: string }[]`.
@@ -154,12 +154,12 @@ Astro.props = {
   file: "/home/user/projects/.../file.md",
   url: "/en/guides/markdown-content/",
   frontmatter: {
-    /** Frontmatter from a blog post */
+    /** 블로그 게시물의 Frontmatter */
     title: "Astro 0.18 Release",
     date: "Tuesday, July 27 2021",
     author: "Matthew Phillips",
     description: "Astro 0.18 is our biggest release since Astro launch.",
-    /** Generated values */
+    /** 생성된 값들 */
     file: "/home/user/projects/.../file.md",
     url: "/en/guides/markdown-content/"
   },
@@ -177,25 +177,26 @@ Astro.props = {
     /* ... */
   ],
 
-  /** Available in Markdown only */
+  /** 마크다운에서만 사용 가능 */
   rawContent: () => "# Astro 0.18 Release\nA little over a month ago, the first public beta [...]",
   compiledContent: () => "<h1>Astro 0.18 Release</h1>\n<p>A little over a month ago, the first public beta [...]</p>",
 }
 ```
 
 :::note
-A Markdown/MDX layout will have access to all its file's [exported properties](/en/guides/markdown-content/#exported-properties) from `Astro.props` **with some key differences:**
 
-*   Heading information (i.e. `h1 -> h6` elements) is available via the `headings` array, rather than a `getHeadings()` function.
+마크다운/MDX 레이아웃은 **몇 가지 주요 차이점**과 함께 `Astro.props`에서 [내보낸 파일의 모든 프로퍼티들](/en/guides/markdown-content/#exported-properties)에 접근할 수 있습니다.
 
-*   `file` and `url` are *also* available as nested `frontmatter` properties (i.e. `frontmatter.url` and `frontmatter.file`).
+*   제목 정보는 `getHeadings()` 함수가 아닌 `headings` 배열을 통해 사용할 수 있습니다. 
 
-*   Values defined outside of frontmatter (e.g. `export` statements in MDX) are not available. Consider [importing a layout](#importing-layouts-manually-mdx) instead.
+*   *또한* `file` 과 `url` 은 중첩으로도 `frontmatter` 프로퍼티들을 사용할 수 있습니다. (예: `frontmatter.url` and `frontmatter.file`).
+
+*   frontmatter 외부에서 정의된 값들(예: `export` statements in MDX)은 사용할 수 없습니다. 대신 [레이아웃을 가져오기](#importing-layouts-manually-mdx)를 고려해 보세요. 
 :::
 
-### Importing Layouts Manually (MDX)
+### 수동으로 레이아웃 가져오기 (MDX)
 
-You may need to pass information to your MDX layout that does not (or cannot) exist in your frontmatter. In this case, you can instead import and use a [`<Layout />` component](/en/core-concepts/layouts/) and pass it props like any other component:
+frontmatter에 존재하지 않거나 존재할 수 없는 정보를 MDX 레이아웃에 전달해야 할 수도 있습니다. 이 경우에는 다른 컴포넌트처럼 [`<Layout />` 컴포넌트](/en/core-concepts/layouts/)를 가져와 사용하고 props를 전달할 수 있습니다.
 
 ```mdx title="src/pages/posts/first-post.mdx" ins={6} del={2} /</?BaseLayout>/ /</?BaseLayout title={frontmatter.title} fancyJsHelper={fancyJsHelper}>/
 ---
@@ -214,7 +215,7 @@ function fancyJsHelper() {
 </BaseLayout>
 ```
 
-Then, your values are available to you through `Astro.props` in your layout, and your MDX content will be injected into the page where your `<slot />` component is written:
+그런 다음 레이아웃의 `Astro.props`를 통해 값을 사용할 수 있고 MDX 컨텐츠가 `<slot />` 컴포넌트가 작성된 페이지에 삽입됩니다.
 
 ```astro "fancyJsHelper" "title"
 ---
@@ -223,18 +224,18 @@ const { title, fancyJsHelper } = Astro.props;
 ---
 <!-- -->
 <h1>{title}</h1>
-<slot /> <!-- your content is injected here -->
+<slot /> <!-- 당신의 컨텐츠는 이곳에 삽입됩니다. -->
 <p>{fancyJsHelper()}</p>
 <!-- -->
 ```
 
-📚 Learn more about Astro’s Markdown and MDX support in our [Markdown/MDX guide](/en/guides/markdown-content/).
+📚 [마크다운/MDX 가이드](/en/guides/markdown-content/)에서 Astro의 마크다운 및 MDX 지원에 대해 자세히 알아보세요.
 
-## Using one Layout for `.md`, `.mdx`, and `.astro`
+## `.md`, `.mdx`, 그리고 `.astro`에 하나의 레이아웃 사용
 
-A single Astro layout can be written to receive the `frontmatter` object from `.md` and `.mdx` files, as well as any named props passed from `.astro` files.
+단일 Astro 레이아웃을 작성하여 `.md` 및 `.mdx` 파일에서 `frontmatter` 객체와 `.astro` 파일에서 명명되어 전달된 모든 props을 수신할 수 있습니다.
 
-In the example below, the layout will display the page title either from an Astro component passing a `title` attribute or from a frontmatter YAML `title` property:
+아래의 예에서, 레이아웃은 `title` 어트리뷰트를 전달하는 Astro 컴포넌트 또는 frontmatter YAML `title` 프로퍼티에서 페이지 제목을 표시합니다.
 
 ```astro /{?title}?/ /Astro.props[.a-z]*/
 ---
@@ -250,11 +251,11 @@ const { title } = Astro.props.frontmatter || Astro.props;
 </html>
 ```
 
-## Nesting Layouts
+## 중첩 레이아웃
 
-Layout components do not need to contain an entire page worth of HTML. You can break your layouts into smaller components, and combine layout components to create even more flexible, page templates.
+레이아웃 컴포넌트는 HTML에 해당하는 전체 페이지를 포함할 필요가 없습니다. 레이아웃을 더 작은 컴포넌트로 나누고 레이아웃 컴포넌트를 결합하여 훨씬 더 유연한 페이지 템플릿을 만들 수 있습니다.
 
-For example, a `BlogPostLayout.astro` layout component could style a post's title, date and author. Then, a site-wide `BaseLayout.astro` could handle the rest of your page template, like navigation and footers. You can also pass props received from your post to another layout, just like any other nested component.
+예를 들어, `BlogPostLayout.astro` 레이아웃 컴포넌트는 게시물의 제목, 날짜 및 작성자를 스타일화할 수 있습니다. 그러면 사이트 전체에서 `BaseLayout.astro`가 navigation과 footers와 같은 페이지 템플릿의 나머지 부분을 처리할 수 있습니다. 또한 다른 중첩된 컴포넌트와 마찬가지로 게시물에서 받은 props를 다른 레이아웃으로 전달할 수 있습니다.
 
 **`src/layouts/BlogPostLayout.astro`**
 
