fix: fix prefix about link en to ko

--- a/src/content/docs/ko/core-concepts/layouts.mdx
+++ b/src/content/docs/ko/core-concepts/layouts.mdx
@@ -4,13 +4,13 @@ description: 레이아웃 소개, 공통 레이아웃을 위해 페이지 간에
 i18nReady: true
 ---
 
-**레이아웃**은 페이지 템플릿과 같은 재사용 가능한 UI 구조를 제공하는 데 사용되는 [Astro 컴포넌트](/en/core-concepts/astro-components/)입니다.
+**레이아웃**은 페이지 템플릿과 같은 재사용 가능한 UI 구조를 제공하는 데 사용되는 [Astro 컴포넌트](/ko/core-concepts/astro-components/)입니다.
 
-우리는 일반적으로 headers, navigation bars 및 footers과 같은 페이지 간에 공유되는 공통 UI 요소를 제공하는 Astro 컴포넌트에 대해 "레이아웃"이라는 용어를 사용합니다. 일반적인 Astro 레이아웃 컴포넌트는 [Astro, Markdown 또는 MDX 페이지](/en/core-concepts/astro-pages/)에 다음 기능을 제공합니다.
+우리는 일반적으로 headers, navigation bars 및 footers과 같은 페이지 간에 공유되는 공통 UI 요소를 제공하는 Astro 컴포넌트에 대해 "레이아웃"이라는 용어를 사용합니다. 일반적인 Astro 레이아웃 컴포넌트는 [Astro, Markdown 또는 MDX 페이지](/ko/core-concepts/astro-pages/)에 다음 기능을 제공합니다.
 - 페이지 쉘 (`<html>`, `<head>` 및 `<body>` 태그들)
-- 개별 페이지 내용이 삽입될 위치를 지정하는 [**`<slot />`**](/en/core-concepts/astro-components/#slots)
+- 개별 페이지 내용이 삽입될 위치를 지정하는 [**`<slot />`**](/ko/core-concepts/astro-components/#slots)
 
- 하지만 레이아웃 구성 요소에 특별한 것은 없습니다! 그들은 [props을 받고](/en/core-concepts/astro-components/#component-props) 다른 Astro 컴포넌트처럼 다른 컴포넌트를 [가져와서 사용](/en/core-concepts/astro-components/#component-structure)할 수 있습니다. [UI 프레임워크 컴포넌트](/en/core-concepts/framework-components/) 및 [클라이언트 사이드 스크립트](/en/guides/client-side-scripts/)를 포함할 수 있습니다. 전체 페이지 셸을 제공할 필요도 없으며 부분 UI 템플릿으로 대신해서 사용할 수도 있습니다.
+ 하지만 레이아웃 구성 요소에 특별한 것은 없습니다! 그들은 [props을 받고](/ko/core-concepts/astro-components/#component-props) 다른 Astro 컴포넌트처럼 다른 컴포넌트를 [가져와서 사용](/ko/core-concepts/astro-components/#component-structure)할 수 있습니다. [UI 프레임워크 컴포넌트](/ko/core-concepts/framework-components/) 및 [클라이언트 사이드 스크립트](/ko/guides/client-side-scripts/)를 포함할 수 있습니다. 전체 페이지 셸을 제공할 필요도 없으며 부분 UI 템플릿으로 대신해서 사용할 수도 있습니다.
 
 레이아웃 컴포넌트는 일반적으로 당신의 프로젝트 구성을 위해 `src/layouts` 디렉터리에 배치됩니다. 그러나 필수 사항은 아닙니다.
 
@@ -55,11 +55,11 @@ import MySiteLayout from '../layouts/MySiteLayout.astro';
 ```
 
 
-📚 [슬롯](/en/core-concepts/astro-components/#slots)에 대해 자세히 알아봅니다.
+📚 [슬롯](/ko/core-concepts/astro-components/#slots)에 대해 자세히 알아봅니다.
 
 ## 마크다운/MDX 레이아웃
 
-페이지 레이아웃은 페이지 형식이 없는 [마크다운 및 MDX 페이지](/en/guides/markdown-content/#markdown-and-mdx-pages)에 특히 유용합니다.
+페이지 레이아웃은 페이지 형식이 없는 [마크다운 및 MDX 페이지](/ko/guides/markdown-content/#markdown-and-mdx-pages)에 특히 유용합니다.
 
 Astro는 페이지 레이아웃으로 사용할 ".astro" 컴포넌트를 지정하는 특별한 `레이아웃` frontmatter 프로퍼티를 제공합니다.
 
@@ -81,7 +81,7 @@ date: "09 Aug 2022"
 마크다운 또는 MDX 페이지의 일반적인 레이아웃은 다음과 같습니다.
 
 1. 마크다운 또는 MDX 페이지의 frontmatter 및 기타 데이터에 접근할 수 있는 `frontmatter` prop 입니다.  
-2. 페이지의 마크다운/MDX 내용을 렌더링할 위치를 나타내는 기본 [`<slot />`](/en/core-concepts/astro-components/#slots)입니다.
+2. 페이지의 마크다운/MDX 내용을 렌더링할 위치를 나타내는 기본 [`<slot />`](/ko/core-concepts/astro-components/#slots)입니다.
 
 ```astro /(?<!//.*){?frontmatter(?:\\.\w+)?}?/ "<slot />"
 ---
@@ -104,7 +104,7 @@ const { frontmatter } = Astro.props;
 </html>
 ```
 
-`MarkdownLayoutProps` 또는 `MDXLayoutProps` 헬퍼를 사용하여 레이아웃의 [`Props` type](/en/guides/typescript/#component-props)을 설정할 수 있습니다. 
+`MarkdownLayoutProps` 또는 `MDXLayoutProps` 헬퍼를 사용하여 레이아웃의 [`Props` type](/ko/guides/typescript/#component-props)을 설정할 수 있습니다. 
 
 ```astro title="src/layouts/BaseLayout.astro" ins={2,4-9}
 ---
@@ -139,7 +139,7 @@ const { frontmatter, url } = Astro.props;
 마크다운/MDX 레이아웃은 `Astro.props`를 통해 다음과 같은 정보에 접근할 수 있습니다.
 
 - **`file`** - 해당 파일의 절대 경로 (예: `/home/user/projects/.../file.md`).
-- **`url`** - 페이지인 경우 페이지의 URL (예: `/en/guides/markdown-content`).
+- **`url`** - 페이지인 경우 페이지의 URL (예: `/ko/guides/markdown-content`).
 - **`frontmatter`** - 마크다운 또는 MDX 문서에서의 모든 frontmatter.
   - **`frontmatter.file`** - 최상위 레벨의 `file` 프로퍼티와 동일.
   - **`frontmatter.url`** - 최상위 레벨의 `url` 프로퍼티와 동일.
@@ -152,7 +152,7 @@ const { frontmatter, url } = Astro.props;
 ```js
 Astro.props = {
   file: "/home/user/projects/.../file.md",
-  url: "/en/guides/markdown-content/",
+  url: "/ko/guides/markdown-content/",
   frontmatter: {
     /** 블로그 게시물의 Frontmatter */
     title: "Astro 0.18 Release",
@@ -161,7 +161,7 @@ Astro.props = {
     description: "Astro 0.18 is our biggest release since Astro launch.",
     /** 생성된 값들 */
     file: "/home/user/projects/.../file.md",
-    url: "/en/guides/markdown-content/"
+    url: "/ko/guides/markdown-content/"
   },
   headings: [
     {
@@ -185,7 +185,7 @@ Astro.props = {
 
 :::note
 
-마크다운/MDX 레이아웃은 **몇 가지 주요 차이점**과 함께 `Astro.props`에서 [내보낸 파일의 모든 프로퍼티들](/en/guides/markdown-content/#exported-properties)에 접근할 수 있습니다.
+마크다운/MDX 레이아웃은 **몇 가지 주요 차이점**과 함께 `Astro.props`에서 [내보낸 파일의 모든 프로퍼티들](/ko/guides/markdown-content/#exported-properties)에 접근할 수 있습니다.
 
 *   제목 정보는 `getHeadings()` 함수가 아닌 `headings` 배열을 통해 사용할 수 있습니다. 
 
@@ -196,7 +196,7 @@ Astro.props = {
 
 ### 수동으로 레이아웃 가져오기 (MDX)
 
-frontmatter에 존재하지 않거나 존재할 수 없는 정보를 MDX 레이아웃에 전달해야 할 수도 있습니다. 이 경우에는 다른 컴포넌트처럼 [`<Layout />` 컴포넌트](/en/core-concepts/layouts/)를 가져와 사용하고 props를 전달할 수 있습니다.
+frontmatter에 존재하지 않거나 존재할 수 없는 정보를 MDX 레이아웃에 전달해야 할 수도 있습니다. 이 경우에는 다른 컴포넌트처럼 [`<Layout />` 컴포넌트](/ko/core-concepts/layouts/)를 가져와 사용하고 props를 전달할 수 있습니다.
 
 ```mdx title="src/pages/posts/first-post.mdx" ins={6} del={2} /</?BaseLayout>/ /</?BaseLayout title={frontmatter.title} fancyJsHelper={fancyJsHelper}>/
 ---
@@ -229,7 +229,7 @@ const { title, fancyJsHelper } = Astro.props;
 <!-- -->
 ```
 
-📚 [마크다운/MDX 가이드](/en/guides/markdown-content/)에서 Astro의 마크다운 및 MDX 지원에 대해 자세히 알아보세요.
+📚 [마크다운/MDX 가이드](/ko/guides/markdown-content/)에서 Astro의 마크다운 및 MDX 지원에 대해 자세히 알아보세요.
 
 ## `.md`, `.mdx`, 그리고 `.astro`에 하나의 레이아웃 사용
 
