edit: content-authoring
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/content/docs/en/reference/api-reference.mdx
+++ b/src/content/docs/en/reference/api-reference.mdx
@@ -756,7 +756,7 @@ This function accepts the following properties:
 
 `type` is a string that defines the type of entries stored within a collection:
 
-- `'content'` - for content authoring formats like Markdown (`.md`), MDX (`.mdx`), or Markdoc (`.mdoc`)
+- `'content'` - for content-authoring formats like Markdown (`.md`), MDX (`.mdx`), or Markdoc (`.mdoc`)
 - `'data'` - for data-only formats like JSON (`.json`) or YAML (`.yaml`)
 
 :::tip
