fix: single author example
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/content/docs/en/guides/content-collections.mdx
+++ b/src/content/docs/en/guides/content-collections.mdx
@@ -362,7 +362,7 @@ const relatedPosts = await getEntries(data.relatedPosts);
 ---
 
 <h1>{blogPost.data.title}</h1>
-<p>Authors: {authors.map(a => a.data.name).join(', ')}</p>
+<p>Author: {author.data.name}</p>
 
 <!-- ... -->
 
