edit: cleaner querying link
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/content/docs/en/reference/api-reference.mdx
+++ b/src/content/docs/en/reference/api-reference.mdx
@@ -865,7 +865,7 @@ const captainProfile = await getEntry(enterprise.data.captain);
 ---
 ```
 
-See the `Content Collection` guide for examples of [querying](/en/guides/content-collections/#querying-collections) and [references](/en/guides/content-collections/#resolving-references).
+See the `Content Collections` guide for examples of [querying collection entries](/en/guides/content-collections/#querying-collections).
 
 ### `getEntries()`
 
