edit: `getEntries()` cleanup
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/content/docs/en/reference/api-reference.mdx
+++ b/src/content/docs/en/reference/api-reference.mdx
@@ -878,7 +878,7 @@ See the `Content Collections` guide for examples of [querying collection entries
 - `(Array<{ collection: string, id: string }>) => CollectionEntry<collection>`
 - `(Array<{ collection: string, slug: string }>) => CollectionEntry<collection>`
 
-`getEntries()` is a function that retrieves multiple collection entries with the same collection name. This is useful for resolving an array of [references](en/guides/content-collections/#defining-collection-references) to their associated `data`, `body`, and `render()` properties.
+`getEntries()` is a function that retrieves multiple collection entries from the same collection. This is useful for [returning an array of referenced entries](/en/guides/content-collections/#defining-collection-references) to access their associated `data`, `body`, and `render()` properties.
 
 ```astro
 ---
