fix: fix prefix about link about note paragraph's Importing layouts Manually

--- a/src/content/docs/ko/core-concepts/layouts.mdx
+++ b/src/content/docs/ko/core-concepts/layouts.mdx
@@ -191,7 +191,7 @@ Astro.props = {
 
 *   *또한* `file` 과 `url` 은 중첩으로도 `frontmatter` 프로퍼티들을 사용할 수 있습니다. (예: `frontmatter.url` and `frontmatter.file`).
 
-*   frontmatter 외부에서 정의된 값들(예: `export` statements in MDX)은 사용할 수 없습니다. 대신 [레이아웃을 가져오기](#importing-layouts-manually-mdx)를 고려해 보세요. 
+*   frontmatter 외부에서 정의된 값들(예: `export` statements in MDX)은 사용할 수 없습니다. 대신 [레이아웃을 가져오기](#수동으로-레이아웃-가져오기-mdx)를 고려해 보세요. 
 :::
 
 ### 수동으로 레이아웃 가져오기 (MDX)
